--- a/src/app/sidebar/sidebar.component.css
+++ b/src/app/sidebar/sidebar.component.css
@@ -2,7 +2,7 @@
 .sidenav {
   padding-top: 20px;
   background-color: #f1f1f1;
-  height: 100%;
+  height: 600px;
   width: 20%;
   margin-left: 3px;
   margin-right: 3px;
